# DSL_grade_db

./: 01_ingest_enrolled_id.py  02_ingest_written_exams.py  03_ingest_team_and_leaderboard.py  04_get_report_to_correct.py  05_ingest_report_grade.py  06_get_students_final_grade.py  README.md  pyproject.toml  requirements.txt
dsl_grade_db/: __init__.py  dsl_student_id_database.py  mongo_db_student_grade.py  student.py
dsl_grade_db/data_ingestor/: __init__.py  mongo_db_enrolled_student.py  mongo_db_report_grade.py  mongo_db_teams_grade.py  mongo_db_written_grade.py  utils.py
test/: test_dsl_student_id_database.py  test_student.py  test_use_cases.py
test/test_data_ingestor/: test_mongo_db_report_grade.py  test_mongo_db_teams_grade.py  test_mongo_db_written_grade.py
