[tool.poetry]
name = "dsl-grade-db"
version = "0.1.0"
description = ""
authors = ["spapicchio <simopapi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
